# neural-memory-reproduction

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  EXPERIMENT_REPORT.md  IMPLEMENTATION_PLAN.md  LICENSE  MIRAS.context.md  NL.context.md  README.md  SETUP_GUIDE.md  TITANS.context.md  docker-compose.yml  pyproject.toml  run_miras_test.sh  run_titans_test.sh
.claude/: SKILL_TESTING_GUIDE.md
.claude/skills/: research-reproduction.md
.claude/skills/research-reproduction/: .gitignore  README.md
.claude/skills/research-reproduction/prompts/: documentation-agent.md  extraction-agent.md  implementation-agent.md  verification-agent.md
.claude/skills/research-reproduction/references/: equation-patterns.md  pytorch-patterns.md
.claude/skills/research-reproduction/scripts/: benchmark_runner.py  extract_paper.py  generate_docs.py  quality_check.py  verify_equations.py
.claude/skills/research-reproduction/templates/: context-document.md  implementation-plan.md  readme-template.md  test-template.md
.claude/skills/research-reproduction/tools/: benchmark-validator.md  colab-execution.md  equation-extractor.md  paper-intake.md  verification-engine.md
.github/workflows/: ci.yml
notebooks/: quickstart.ipynb
scripts/: run_all_tests.sh  run_titans_test.sh
src/common/: attention.py
src/miras/: __init__.py  memory.py
src/nl/: optimizers.py
src/titans/: memory.py
tests/: conftest.py
tests/test_equations/: test_common_attention.py  test_miras_memory.py  test_nl_optimizers.py  test_titans_memory.py
tests/test_integration/: test_all_papers.py
